--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.5"/>
+	<classpathentry kind="lib" path="A:/Andrew/Source files for programming/mysql-connector.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
